--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "remark-html": "^16.0.1",
     "swr": "^2.2.5"
   },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18"
+  },
   "engines": {
     "node": ">=18"
   }
