--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "prisma": "^5.14.0",
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=18"
