--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "18.2.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "server-only": "^0.0.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
