--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "prisma": "^5.14.0",
-    "typescript": "^5"
+    "typescript": "latest"
   },
   "engines": {
     "node": ">=18"
