--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-monaco-editor": "^0.59.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "server-only": "^0.0.1",
     "swr": "^2.2.5",
     "tailwindcss": "^4.1.11",
-    "vditor": "^3.11.2"
+    "vditor": "^3.11.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
